# MDLite

./: CMakeLists.txt  README.md  e3.xml  elementary.xml
MDLite/: CMakeLists.txt  MDAppBar.cpp  MDAppBar.h  MDAppBar.xml  MDAppBarAction.cpp  MDAppBarAction.h  MDAppBarAction.xml  MDAppBarTitle.cpp  MDAppBarTitle.h  MDAppBarTitle.xml  MDBottomNavigationBar.cpp  MDBottomNavigationBar.h  MDBottomNavigationBar.xml  MDBottomNavigationBarItem.cpp  MDBottomNavigationBarItem.h  MDBottomNavigationBarItem.xml  MDBottomSheet.cpp  MDBottomSheet.h  MDBottomSheet.xml  MDButton.cpp  MDButton.h  MDButton.xml  MDCheckable.cpp  MDCheckable.h  MDCheckbox.cpp  MDCheckbox.h  MDCheckbox.xml  MDCircularProgressIndicator.cpp  MDCircularProgressIndicator.h  MDCircularProgressIndicator.xml  MDCol.cpp  MDCol.h  MDCol.xml  MDColor.cpp  MDColor.h  MDColors.cpp  MDColors.h  MDDialog.cpp  MDDialog.h  MDDialog.xml  (+98 more)
MDLite/assets/MDLite/e3/system_locale/: ru.json
MDLite/assets/MDLite/locale/: en.json
MDLite/assets/e3/system_locale/: en.json
MDLite/private/: MDAppBarActionBase.cpp  MDAppBarActionBase.h  MDAppBarBase.cpp  MDAppBarBase.h  MDAppBarTitleBase.cpp  MDAppBarTitleBase.h  MDBottomNavigationBarBase.cpp  MDBottomNavigationBarBase.h  MDBottomNavigationBarItemBase.cpp  MDBottomNavigationBarItemBase.h  MDBottomSheetBase.cpp  MDBottomSheetBase.h  MDButtonBase.cpp  MDButtonBase.h  MDCheckboxBase.cpp  MDCheckboxBase.h  MDCircularProgressIndicatorBase.cpp  MDCircularProgressIndicatorBase.h  MDColBase.cpp  MDColBase.h  MDDialogBase.cpp  MDDialogBase.h  MDDividerBase.cpp  MDDividerBase.h  MDDrawerBase.cpp  MDDrawerBase.h  MDElementBase.cpp  MDElementBase.h  MDFloatingActionButtonBase.cpp  MDFloatingActionButtonBase.h  MDFloatingActionButtonExtendedBase.cpp  MDFloatingActionButtonExtendedBase.h  MDIconBase.cpp  MDIconBase.h  MDIconButtonBase.cpp  MDIconButtonBase.h  MDInkWellBase.cpp  MDInkWellBase.h  MDInputBase.cpp  MDInputBase.h  (+44 more)
MDLiteTest/: CMakeLists.txt
MDLiteTest/Android/: build.gradle
MDLiteTest/Android/app/: build.gradle
MDLiteTest/Android/app/libs/: element3d-debug.aar
MDLiteTest/Android/app/src/main/: AndroidManifest.xml
MDLiteTest/Android/app/src/main/java/com/MDLiteTest/: MainActivity.java
MDLiteTest/Android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
MDLiteTest/App/: AppBarPage.cpp  AppBarPage.h  AppBarPage.xml  Application.cpp  Application.h  BottomNavigationBarPage.cpp  BottomNavigationBarPage.h  BottomNavigationBarPage.xml  BottomSheetPage.cpp  BottomSheetPage.h  BottomSheetPage.xml  ButtonsPage.cpp  ButtonsPage.h  ButtonsPage.xml  CMakeLists.txt  DialogPage.cpp  DialogPage.h  DialogPage.xml  DrawerPage.cpp  DrawerPage.h  DrawerPage.xml  ListPage.cpp  ListPage.h  ListPage.xml  Main.cpp  Main.h  Main.xml  MainMenuItem.cpp  MainMenuItem.h  MainMenuItem.xml  MenuPage.cpp  MenuPage.h  MenuPage.xml  NavigationRailPage.cpp  NavigationRailPage.h  NavigationRailPage.xml  ProgressIndicatorPage.cpp  ProgressIndicatorPage.h  ProgressIndicatorPage.xml  SelectionControlsPage.cpp  (+15 more)
MDLiteTest/App/Android/: android_main.cpp
MDLiteTest/App/Android/private/: e3_android_main.cpp
MDLiteTest/App/private/: AppBarPageBase.cpp  AppBarPageBase.h  AppLocale.h  ApplicationBase.h  BottomNavigationBarPageBase.cpp  BottomNavigationBarPageBase.h  BottomSheetPageBase.cpp  BottomSheetPageBase.h  ButtonsPageBase.cpp  ButtonsPageBase.h  DialogPageBase.cpp  DialogPageBase.h  DrawerPageBase.cpp  DrawerPageBase.h  ListPageBase.cpp  ListPageBase.h  MDLiteTestValues.cpp  MDLiteTestValues.h  MainBase.cpp  MainBase.h  MainMenuItemBase.cpp  MainMenuItemBase.h  MenuPageBase.cpp  MenuPageBase.h  NavigationRailPageBase.cpp  NavigationRailPageBase.h  ProgressIndicatorPageBase.cpp  ProgressIndicatorPageBase.h  SelectionControlsPageBase.cpp  SelectionControlsPageBase.h  SlidersPageBase.cpp  SlidersPageBase.h  SnackbarPageBase.cpp  SnackbarPageBase.h  TabsPageBase.cpp  TabsPageBase.h  TextFieldsPageBase.cpp  TextFieldsPageBase.h
MDLiteTest/Desktop/: CMakeLists.txt
MDLiteTest/MobileSimulator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
MDLiteTest/assets/MDLiteTest/locale/: en.json
cmake/: get_elementary_libs.cmake
